# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/restaurants', require('./restaurants'))
+router.use('/outsideRestaurants', require('./outsideRestaurants'))
 
 module.exports = router;
